chore: change deprecated build configs